syntax = "proto3";

package org.project_planton.provider.digitalocean.digitaloceandatabasecluster.v1;

// DigitalOceanDatabaseClusterStackOutputs captures the key outputs after provisioning a DigitalOcean database cluster.
message DigitalOceanDatabaseClusterStackOutputs {
  // The unique identifier (UUID) of the created database cluster.
  string cluster_id = 1;

  // The full connection URI for the database cluster (including credentials and database name).
  string connection_uri = 2;

  // The hostname or IP address at which the database cluster is accessible.
  string host = 3;

  // The network port that the database cluster is listening on.
  uint32 port = 4;

  // The username for the cluster’s default database user.
  string database_user = 5;

  // The password for the cluster’s default database user.
  string database_password = 6;
}
