syntax = "proto3";

package project.planton.credential.confluentcredential.v1;

import "buf/validate/validate.proto";
import "project/planton/shared/shared.proto";

// ConfluentCredentialSpec message represents the specification required to create or connect to a Confluent Cloud
// account on the Planton Cloud Platform.
// This message consolidates all necessary input parameters to establish a connection with a Confluent Cloud account,
// ensuring accurate configuration and validation of credentials.
// Fields include environment information, API key, and API secret, providing a complete set of information for
// securely connecting to Confluent Cloud.
message ConfluentCredentialSpec {
  // Information about the environment in which the Confluent credential is being used.
  // This field is used to provide additional context, such as the associated organization and environment details.
  project.planton.shared.ApiResourceEnvironmentInfo environment_info = 99;

  // The Confluent Cloud API Key, which is used to authenticate API requests to Confluent services.
  // This is a required field, and it must be a valid non-empty string.
  string api_key = 1;

  // The Confluent Cloud API Secret, which is used in combination with the API key to authenticate API requests to Confluent services.
  // This is a required field, and it must be a valid non-empty string.
  string api_secret = 2;
}
