package kubernetesjobv1

import (
	"testing"

	"buf.build/go/protovalidate"
	"github.com/onsi/ginkgo/v2"
	"github.com/onsi/gomega"
	"github.com/plantonhq/project-planton/apis/org/project_planton/provider/kubernetes"
	"github.com/plantonhq/project-planton/apis/org/project_planton/shared"
	"github.com/plantonhq/project-planton/apis/org/project_planton/shared/cloudresourcekind"
	foreignkeyv1 "github.com/plantonhq/project-planton/apis/org/project_planton/shared/foreignkey/v1"
	"google.golang.org/protobuf/proto"
)

func TestKubernetesJob(t *testing.T) {
	gomega.RegisterFailHandler(ginkgo.Fail)
	ginkgo.RunSpecs(t, "KubernetesJob Suite")
}

var _ = ginkgo.Describe("KubernetesJob Custom Validation Tests", func() {
	var input *KubernetesJob

	ginkgo.BeforeEach(func() {
		input = &KubernetesJob{
			ApiVersion: "kubernetes.project-planton.org/v1",
			Kind:       "KubernetesJob",
			Metadata: &shared.CloudResourceMetadata{
				Name: "my-batch-job",
			},
			Spec: &KubernetesJobSpec{
				TargetCluster: &kubernetes.KubernetesClusterSelector{
					ClusterKind: cloudresourcekind.CloudResourceKind_GcpGkeCluster,
					ClusterName: "test-cluster",
				},
				Namespace: &foreignkeyv1.StringValueOrRef{
					LiteralOrRef: &foreignkeyv1.StringValueOrRef_Value{
						Value: "test-namespace",
					},
				},
				CreateNamespace: true,
				Image: &kubernetes.ContainerImage{
					Repo: "busybox",
					Tag:  "latest",
				},
				Resources: &kubernetes.ContainerResources{
					Limits: &kubernetes.CpuMemory{
						Cpu:    "1000m",
						Memory: "1Gi",
					},
					Requests: &kubernetes.CpuMemory{
						Cpu:    "50m",
						Memory: "100Mi",
					},
				},
				Env: &KubernetesJobContainerAppEnv{
					Variables: map[string]*foreignkeyv1.StringValueOrRef{
						"BATCH_SIZE": {
							LiteralOrRef: &foreignkeyv1.StringValueOrRef_Value{
								Value: "1000",
							},
						},
					},
					Secrets: map[string]*kubernetes.KubernetesSensitiveValue{
						"API_KEY": {
							SensitiveValue: &kubernetes.KubernetesSensitiveValue_Value{
								Value: "secret_value",
							},
						},
					},
				},
				CompletionMode: proto.String("NonIndexed"),
				RestartPolicy:  proto.String("Never"),
			},
		}
	})

	ginkgo.Describe("When valid input is passed", func() {
		ginkgo.Context("kubernetes_job with create_namespace=true", func() {
			ginkgo.It("should not return a validation error", func() {
				err := protovalidate.Validate(input)
				gomega.Expect(err).To(gomega.BeNil())
			})
		})

		ginkgo.Context("kubernetes_job with create_namespace=false", func() {
			ginkgo.It("should not return a validation error", func() {
				input.Spec.CreateNamespace = false
				err := protovalidate.Validate(input)
				gomega.Expect(err).To(gomega.BeNil())
			})
		})

		ginkgo.Context("kubernetes_job with restart_policy=OnFailure", func() {
			ginkgo.It("should not return a validation error", func() {
				input.Spec.RestartPolicy = proto.String("OnFailure")
				err := protovalidate.Validate(input)
				gomega.Expect(err).To(gomega.BeNil())
			})
		})

		ginkgo.Context("kubernetes_job with completion_mode=Indexed", func() {
			ginkgo.It("should not return a validation error", func() {
				input.Spec.CompletionMode = proto.String("Indexed")
				input.Spec.Completions = proto.Uint32(5)
				input.Spec.Parallelism = proto.Uint32(3)
				err := protovalidate.Validate(input)
				gomega.Expect(err).To(gomega.BeNil())
			})
		})

		ginkgo.Context("kubernetes_job with parallel execution", func() {
			ginkgo.It("should not return a validation error", func() {
				input.Spec.Parallelism = proto.Uint32(10)
				input.Spec.Completions = proto.Uint32(100)
				err := protovalidate.Validate(input)
				gomega.Expect(err).To(gomega.BeNil())
			})
		})

		ginkgo.Context("kubernetes_job with active_deadline_seconds", func() {
			ginkgo.It("should not return a validation error", func() {
				input.Spec.ActiveDeadlineSeconds = proto.Uint64(3600)
				err := protovalidate.Validate(input)
				gomega.Expect(err).To(gomega.BeNil())
			})
		})

		ginkgo.Context("kubernetes_job with ttl_seconds_after_finished", func() {
			ginkgo.It("should not return a validation error", func() {
				input.Spec.TtlSecondsAfterFinished = proto.Uint32(86400)
				err := protovalidate.Validate(input)
				gomega.Expect(err).To(gomega.BeNil())
			})
		})
	})

	ginkgo.Describe("When invalid input is passed", func() {
		ginkgo.Context("kubernetes_job with invalid restart_policy", func() {
			ginkgo.It("should return a validation error", func() {
				input.Spec.RestartPolicy = proto.String("Always")
				err := protovalidate.Validate(input)
				gomega.Expect(err).ToNot(gomega.BeNil())
			})
		})

		ginkgo.Context("kubernetes_job with invalid completion_mode", func() {
			ginkgo.It("should return a validation error", func() {
				input.Spec.CompletionMode = proto.String("Invalid")
				err := protovalidate.Validate(input)
				gomega.Expect(err).ToNot(gomega.BeNil())
			})
		})
	})

	ginkgo.Describe("Environment secrets validation", func() {
		ginkgo.Context("When secrets have direct string values", func() {
			ginkgo.It("should pass validation", func() {
				input.Spec.Env = &KubernetesJobContainerAppEnv{
					Secrets: map[string]*kubernetes.KubernetesSensitiveValue{
						"DATABASE_PASSWORD": {
							SensitiveValue: &kubernetes.KubernetesSensitiveValue_Value{
								Value: "my-password",
							},
						},
					},
				}
				err := protovalidate.Validate(input)
				gomega.Expect(err).To(gomega.BeNil())
			})
		})

		ginkgo.Context("When secrets have Kubernetes Secret references", func() {
			ginkgo.It("should pass validation with valid secret ref", func() {
				input.Spec.Env = &KubernetesJobContainerAppEnv{
					Secrets: map[string]*kubernetes.KubernetesSensitiveValue{
						"DATABASE_PASSWORD": {
							SensitiveValue: &kubernetes.KubernetesSensitiveValue_SecretRef{
								SecretRef: &kubernetes.KubernetesSecretKeyRef{
									Name: "my-app-secrets",
									Key:  "db-password",
								},
							},
						},
					},
				}
				err := protovalidate.Validate(input)
				gomega.Expect(err).To(gomega.BeNil())
			})
		})

		ginkgo.Context("When secrets have mixed types", func() {
			ginkgo.It("should pass validation with both string values and secret refs", func() {
				input.Spec.Env = &KubernetesJobContainerAppEnv{
					Secrets: map[string]*kubernetes.KubernetesSensitiveValue{
						"DEBUG_TOKEN": {
							SensitiveValue: &kubernetes.KubernetesSensitiveValue_Value{
								Value: "debug-only-token",
							},
						},
						"DATABASE_PASSWORD": {
							SensitiveValue: &kubernetes.KubernetesSensitiveValue_SecretRef{
								SecretRef: &kubernetes.KubernetesSecretKeyRef{
									Name: "postgres-credentials",
									Key:  "password",
								},
							},
						},
					},
				}
				err := protovalidate.Validate(input)
				gomega.Expect(err).To(gomega.BeNil())
			})
		})

		ginkgo.Context("When secret ref is missing required fields", func() {
			ginkgo.It("should fail validation when name is missing", func() {
				input.Spec.Env = &KubernetesJobContainerAppEnv{
					Secrets: map[string]*kubernetes.KubernetesSensitiveValue{
						"DATABASE_PASSWORD": {
							SensitiveValue: &kubernetes.KubernetesSensitiveValue_SecretRef{
								SecretRef: &kubernetes.KubernetesSecretKeyRef{
									Name: "",
									Key:  "password",
								},
							},
						},
					},
				}
				err := protovalidate.Validate(input)
				gomega.Expect(err).ToNot(gomega.BeNil())
			})

			ginkgo.It("should fail validation when key is missing", func() {
				input.Spec.Env = &KubernetesJobContainerAppEnv{
					Secrets: map[string]*kubernetes.KubernetesSensitiveValue{
						"DATABASE_PASSWORD": {
							SensitiveValue: &kubernetes.KubernetesSensitiveValue_SecretRef{
								SecretRef: &kubernetes.KubernetesSecretKeyRef{
									Name: "my-secret",
									Key:  "",
								},
							},
						},
					},
				}
				err := protovalidate.Validate(input)
				gomega.Expect(err).ToNot(gomega.BeNil())
			})
		})
	})

	ginkgo.Describe("Environment variables validation", func() {
		ginkgo.Context("When variables have direct string values", func() {
			ginkgo.It("should pass validation", func() {
				input.Spec.Env = &KubernetesJobContainerAppEnv{
					Variables: map[string]*foreignkeyv1.StringValueOrRef{
						"INPUT_FILE": {
							LiteralOrRef: &foreignkeyv1.StringValueOrRef_Value{
								Value: "/data/input.csv",
							},
						},
						"OUTPUT_FILE": {
							LiteralOrRef: &foreignkeyv1.StringValueOrRef_Value{
								Value: "/data/output.csv",
							},
						},
					},
				}
				err := protovalidate.Validate(input)
				gomega.Expect(err).To(gomega.BeNil())
			})
		})

		ginkgo.Context("When variables have valueFrom references", func() {
			ginkgo.It("should pass validation with valid valueFrom ref", func() {
				input.Spec.Env = &KubernetesJobContainerAppEnv{
					Variables: map[string]*foreignkeyv1.StringValueOrRef{
						"DATABASE_HOST": {
							LiteralOrRef: &foreignkeyv1.StringValueOrRef_ValueFrom{
								ValueFrom: &foreignkeyv1.ValueFromRef{
									Name: "my-postgres",
								},
							},
						},
					},
				}
				err := protovalidate.Validate(input)
				gomega.Expect(err).To(gomega.BeNil())
			})
		})

		ginkgo.Context("When variables have mixed types", func() {
			ginkgo.It("should pass validation with both direct values and valueFrom refs", func() {
				input.Spec.Env = &KubernetesJobContainerAppEnv{
					Variables: map[string]*foreignkeyv1.StringValueOrRef{
						"BATCH_SIZE": {
							LiteralOrRef: &foreignkeyv1.StringValueOrRef_Value{
								Value: "1000",
							},
						},
						"DATABASE_HOST": {
							LiteralOrRef: &foreignkeyv1.StringValueOrRef_ValueFrom{
								ValueFrom: &foreignkeyv1.ValueFromRef{
									Name: "my-postgres",
								},
							},
						},
					},
				}
				err := protovalidate.Validate(input)
				gomega.Expect(err).To(gomega.BeNil())
			})
		})

		ginkgo.Context("When valueFrom ref is missing required name", func() {
			ginkgo.It("should fail validation", func() {
				input.Spec.Env = &KubernetesJobContainerAppEnv{
					Variables: map[string]*foreignkeyv1.StringValueOrRef{
						"DATABASE_HOST": {
							LiteralOrRef: &foreignkeyv1.StringValueOrRef_ValueFrom{
								ValueFrom: &foreignkeyv1.ValueFromRef{
									Name: "",
								},
							},
						},
					},
				}
				err := protovalidate.Validate(input)
				gomega.Expect(err).ToNot(gomega.BeNil())
			})
		})
	})
})
